<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="hint_name">Name</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="order_summary">Order Summary</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="order">Order</string>

    <string name="thank_you">Thank you!</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>


</resources>
