<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">


    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textCapWords"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        />

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Whipped cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>

    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chocolate"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:textAllCaps="true"
            android:onClick="decrement"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/quantity_text_view"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:textAllCaps="true"
            android:onClick="increment"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textAllCaps="true"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/order_summary_text_view"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textAllCaps="true"
        android:onClick="submitOrder"/>
</LinearLayout>
